creacion de clase COvni

--- a/Ejercicio 5/Ejercicio 5.vcxproj.filters
+++ b/Ejercicio 5/Ejercicio 5.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Source.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="COvni.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="COvni.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
