--- a/Ejercicio 5/Ejercicio 5.vcxproj
+++ b/Ejercicio 5/Ejercicio 5.vcxproj
@@ -111,10 +111,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CAlfa.cpp" />
     <ClCompile Include="COvni.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CAlfa.h" />
     <ClInclude Include="COvni.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
