--- a/Ejercicio 5/Ejercicio 5.vcxproj.filters
+++ b/Ejercicio 5/Ejercicio 5.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="COvni.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="CAlfa.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="COvni.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CAlfa.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
